<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_logo_login"
        android:layout_marginBottom="32dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="#F4DDDD"
        android:text="@string/title_login_user_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_login_user_name_hint"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="#F4DDDD"
        android:text="@string/title_login_password"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_login_password_hint"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/chkSaveLoginFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_save_login_infor"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp">

        <Button
            android:onClick="do_login"
            android:id="@+id/button"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:text="@string/title_login_button_login"
            android:textSize="16sp"
            android:layout_marginEnd="16dp"/>

        <ImageView
            android:onClick="do_exit"
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_delete" />
    </LinearLayout>
</LinearLayout>